--- a/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
+++ b/installation/manifests/upstream-nightly/eventing/mt-channel-broker.yaml
@@ -16,7 +16,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-channel-broker-controller
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 rules:
   # Configs resources and status we care about.
@@ -58,7 +58,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 rules:
   - apiGroups:
@@ -74,6 +74,36 @@ rules:
       - ""
     resources:
       - "configmaps"
+    verbs:
+      - get
+      - list
+      - watch
+
+---
+# Copyright 2023 The Knative Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: mt-broker-filter
+  namespace: knative-eventing
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - "secrets"
     verbs:
       - get
       - list
@@ -99,7 +129,7 @@ metadata:
   name: mt-broker-filter
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -121,9 +151,18 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 rules:
+  - apiGroups:
+      - eventing.knative.dev
+    resources:
+      - eventtypes
+    verbs:
+      - create
+      - get
+      - list
+      - watch
   - apiGroups:
       - eventing.knative.dev
     resources:
@@ -136,6 +175,35 @@ rules:
       - ""
     resources:
       - "configmaps"
+    verbs:
+      - get
+      - list
+      - watch
+
+---
+# Copyright 2023 The Knative Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: mt-broker-ingress
+  namespace: knative-eventing
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - "secrets"
     verbs:
       - get
       - list
@@ -161,7 +229,7 @@ metadata:
   name: mt-broker-ingress
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 
 ---
@@ -184,7 +252,7 @@ kind: ClusterRoleBinding
 metadata:
   name: eventing-mt-channel-broker-controller
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -215,7 +283,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-filter
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -224,6 +292,35 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: knative-eventing-mt-broker-filter
+  apiGroup: rbac.authorization.k8s.io
+
+---
+# Copyright 2023 The Knative Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: mt-broker-filter
+  namespace: knative-eventing
+subjects:
+  - kind: ServiceAccount
+    name: mt-broker-filter
+    namespace: knative-eventing
+roleRef:
+  kind: Role
+  name: mt-broker-filter
   apiGroup: rbac.authorization.k8s.io
 
 ---
@@ -246,7 +343,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-mt-broker-ingress
   labels:
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -255,6 +352,34 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: knative-eventing-mt-broker-ingress
+  apiGroup: rbac.authorization.k8s.io
+
+---
+# Copyright 2023 The Knative Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: mt-broker-ingress
+  namespace: knative-eventing
+subjects:
+  - kind: ServiceAccount
+    name: mt-broker-ingress
+    namespace: knative-eventing
+roleRef:
+  kind: Role
+  name: mt-broker-ingress
   apiGroup: rbac.authorization.k8s.io
 
 ---
@@ -279,7 +404,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -290,7 +415,7 @@ spec:
       labels:
         eventing.knative.dev/brokerRole: filter
         app.kubernetes.io/component: broker-filter
-        app.kubernetes.io/version: "20230405-500ae1d96"
+        app.kubernetes.io/version: "20230727-ffa591593"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-filter
@@ -298,7 +423,7 @@ spec:
       containers:
         - name: filter
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:49d4d956489503f5fd7ae275519c7676abc1c41ec8a3f547c238c0d04902d53d
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/filter@sha256:d3d417cdbdd63ef7df81b6ad0ae221c2fce8c0c98e194007986c961d27ac847d
           readinessProbe: &probe
             failureThreshold: 3
             httpGet:
@@ -318,6 +443,9 @@ spec:
           ports:
             - containerPort: 8080
               name: http
+              protocol: TCP
+            - containerPort: 8443
+              name: https
               protocol: TCP
             - containerPort: 9092
               name: metrics
@@ -348,6 +476,8 @@ spec:
               value: knative.dev/internal/eventing
             - name: FILTER_PORT
               value: "8080"
+            - name: FILTER_PORT_HTTPS
+              value: "8443"
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
@@ -364,7 +494,7 @@ metadata:
   labels:
     eventing.knative.dev/brokerRole: filter
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
   name: broker-filter
   namespace: knative-eventing
@@ -374,6 +504,10 @@ spec:
       port: 80
       protocol: TCP
       targetPort: 8080
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 8443
     - name: http-metrics
       port: 9092
       protocol: TCP
@@ -403,7 +537,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -414,7 +548,7 @@ spec:
       labels:
         eventing.knative.dev/brokerRole: ingress
         app.kubernetes.io/component: broker-ingress
-        app.kubernetes.io/version: "20230405-500ae1d96"
+        app.kubernetes.io/version: "20230727-ffa591593"
         app.kubernetes.io/name: knative-eventing
     spec:
       serviceAccountName: mt-broker-ingress
@@ -422,7 +556,7 @@ spec:
       containers:
         - name: ingress
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:a3e82d143ba0c63c0f0c4a599f103efc56415256db97ef67b5c164ede142596c
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/broker/ingress@sha256:eb88ba217b52db3eb2eda82bc840f2307b578877d393a0766a5b91686e257715
           readinessProbe: &probe
             failureThreshold: 3
             httpGet:
@@ -442,6 +576,9 @@ spec:
           ports:
             - containerPort: 8080
               name: http
+              protocol: TCP
+            - containerPort: 8443
+              name: https
               protocol: TCP
             - containerPort: 9092
               name: metrics
@@ -472,6 +609,8 @@ spec:
               value: knative.dev/internal/eventing
             - name: INGRESS_PORT
               value: "8080"
+            - name: INGRESS_PORT_HTTPS
+              value: "8443"
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
@@ -488,7 +627,7 @@ metadata:
   labels:
     eventing.knative.dev/brokerRole: ingress
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
   name: broker-ingress
   namespace: knative-eventing
@@ -498,6 +637,10 @@ spec:
       port: 80
       protocol: TCP
       targetPort: 8080
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 8443
     - name: http-metrics
       port: 9092
       protocol: TCP
@@ -527,7 +670,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: mt-broker-controller
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 spec:
   selector:
@@ -538,7 +681,7 @@ spec:
       labels:
         app: mt-broker-controller
         app.kubernetes.io/component: broker-controller
-        app.kubernetes.io/version: "20230405-500ae1d96"
+        app.kubernetes.io/version: "20230727-ffa591593"
         app.kubernetes.io/name: knative-eventing
     spec:
       # To avoid node becoming SPOF, spread our replicas to different nodes.
@@ -556,7 +699,7 @@ spec:
       containers:
         - name: mt-broker-controller
           terminationMessagePolicy: FallbackToLogsOnError
-          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:df29b560b4c5710a1d8a3e2b381bc3f098b933650ee925d67721f9c609a1200d
+          image: gcr.io/knative-nightly/knative.dev/eventing/cmd/mtchannel_broker@sha256:0ac6d0956cb573ebb6ed4f1c04549cd6bc29122046c7aac33270e8d93678a043
           resources:
             requests:
               cpu: 100m
@@ -613,7 +756,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-ingress
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
@@ -637,7 +780,7 @@ metadata:
   namespace: knative-eventing
   labels:
     app.kubernetes.io/component: broker-filter
-    app.kubernetes.io/version: "20230405-500ae1d96"
+    app.kubernetes.io/version: "20230727-ffa591593"
     app.kubernetes.io/name: knative-eventing
 spec:
   scaleTargetRef:
