--- a/installation/manifests/upstream-nightly/eventing/eventing-post-install.yaml
+++ b/installation/manifests/upstream-nightly/eventing/eventing-post-install.yaml
@@ -17,7 +17,7 @@ kind: ClusterRole
 metadata:
   name: knative-eventing-post-install-job-role
   labels:
-    app.kubernetes.io/version: "20241019-6aa49dc1d"
+    app.kubernetes.io/version: "20250504-06f8dc924"
     app.kubernetes.io/name: knative-eventing
 rules:
   # Storage version upgrader needs to be able to patch CRDs.
@@ -151,7 +151,7 @@ metadata:
   name: knative-eventing-post-install-job
   namespace: knative-eventing
   labels:
-    app.kubernetes.io/version: "20241019-6aa49dc1d"
+    app.kubernetes.io/version: "20250504-06f8dc924"
     app.kubernetes.io/name: knative-eventing
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -159,7 +159,7 @@ kind: ClusterRoleBinding
 metadata:
   name: knative-eventing-post-install-job-role-binding
   labels:
-    app.kubernetes.io/version: "20241019-6aa49dc1d"
+    app.kubernetes.io/version: "20250504-06f8dc924"
     app.kubernetes.io/name: knative-eventing
 subjects:
   - kind: ServiceAccount
@@ -194,7 +194,7 @@ metadata:
     app: "storage-version-migration-eventing"
     app.kubernetes.io/name: knative-eventing
     app.kubernetes.io/component: storage-version-migration-job
-    app.kubernetes.io/version: "20241019-6aa49dc1d"
+    app.kubernetes.io/version: "20250504-06f8dc924"
 spec:
   ttlSecondsAfterFinished: 600
   backoffLimit: 10
@@ -204,7 +204,7 @@ spec:
         app: "storage-version-migration-eventing"
         app.kubernetes.io/name: knative-eventing
         app.kubernetes.io/component: storage-version-migration-job
-        app.kubernetes.io/version: "20241019-6aa49dc1d"
+        app.kubernetes.io/version: "20250504-06f8dc924"
         sidecar.istio.io/inject: "false"
       annotations:
         sidecar.istio.io/inject: "false"
@@ -213,7 +213,10 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: migrate
-          image: gcr.io/knative-nightly/knative.dev/pkg/apiextensions/storageversion/cmd/migrate@sha256:4d3e366b7afb943902d0ca41abc6354fcab4372e5437e924cdfa5e9729fb8b95
+          image: gcr.io/knative-nightly/knative.dev/pkg/apiextensions/storageversion/cmd/migrate@sha256:9418cf4cc8da39103d0b9790752491bb0513583c817beeda3b34cce8fc98a35e
+          env:
+            - name: IGNORE_NOT_FOUND
+              value: "true"
           args:
             - "apiserversources.sources.knative.dev"
             - "brokers.eventing.knative.dev"
@@ -228,6 +231,9 @@ spec:
             - "subscriptions.messaging.knative.dev"
             - "triggers.eventing.knative.dev"
             - "jobsinks.sinks.knative.dev"
+            - "eventpolicies.eventing.knative.dev"
+            - "integrationsources.sources.knative.dev"
+            - "integrationsinks.sinks.knative.dev"
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
